logs/django-startcbv.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_startcbv-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/startcbv'...
Listing './lib/python3.5/site-packages/startcbv/management'...
Listing './lib/python3.5/site-packages/startcbv/management/commands'...
Compiling './lib/python3.5/site-packages/startcbv/management/commands/startcbv.py'...
***   File "./lib/python3.5/site-packages/startcbv/management/commands/startcbv.py", line 50
    print "Generating your app with class-based views..."
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/startcbv/templates'...
Listing './lib/python3.5/site-packages/startcbv/templates/startcbv'...
Compiling './lib/python3.5/site-packages/startcbv/templates/startcbv/admin.py'...
***   File "./lib/python3.5/site-packages/startcbv/templates/startcbv/admin.py", line 3
    from {{ app_name }}.models import {{ model_name }}
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/startcbv/templates/startcbv/models.py'...
***   File "./lib/python3.5/site-packages/startcbv/templates/startcbv/models.py", line 4
    class {{ model_name }}(models.Model):
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/startcbv/templates/startcbv/urls.py'...
***   File "./lib/python3.5/site-packages/startcbv/templates/startcbv/urls.py", line 3
    from {{ app_name }}.models import {{ model_name }}
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/test_project'...
Listing './share'...
Listing './share/python-wheels'...
